# rapidly-sdk

./: AGENTS.md  CHANGELOG.md  LICENSE  Package.swift  README.md
bindings/kotlin/: README.md
bindings/kotlin/src/main/kotlin/io/rapidly/engine/: RapidlyEngine.kt
bindings/python/: HOWTO.txt  README.md  examples.py  pyproject.toml  setup.py
bindings/python/rapidly/: __init__.py  rapidly.py  rapidly_file.py
bindings/swift/: README.md
bindings/swift/Sources/RapidlyEngine/: RapidlyEngine.swift
docs/: Quickstart.mdx
examples/: CMakeLists.txt
examples/_riffwave/: RiffWave.cpp
examples/process-file/: CMakeLists.txt  ProcessFile.cpp
examples/raspberry-pi/: README.md
examples/riffwave/: RiffWave.h
include/: RapidlyEngine.h
